--- a/Introdução_a_Collections.ipynb
+++ b/Introdução_a_Collections.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Introdução a Collections",
       "provenance": [],
-      "authorship_tag": "ABX9TyOI/RmItTal9JHVwcE2qHCV",
+      "authorship_tag": "ABX9TyPnTPUhQl5k7NOLZJtqVH+1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -781,6 +781,222 @@
       "cell_type": "code",
       "metadata": {
         "id": "pfNmPoVooFh7",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "goU0Qq8vP-Et",
+        "colab_type": "text"
+      },
+      "source": [
+        "#Objetos próprios"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kfEtiK28QH9x",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "class ContaCorrente:\n",
+        "  def __init__(self, codigo):\n",
+        "    self.codigo = codigo\n",
+        "    self.saldo = 0\n",
+        "  \n",
+        "  def deposita(self,valor):\n",
+        "    self.saldo += valor\n",
+        "\n",
+        "  def __str__(self):\n",
+        "    return '[>>Codigo {} Saldo {}<<]'.format(self.codigo, self.saldo)\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DkFIEDPZQpw4",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "fde068b8-bea6-4b80-fcd7-ee7dc3e01ddd"
+      },
+      "source": [
+        "conta_do_gui = ContaCorrente(15)\n",
+        "print(conta_do_gui)"
+      ],
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[>>Codigo 15 Saldo 0<<]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XgQ95ph5QyMt",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "d66ba282-0ab5-4495-f012-4c70b1e69d5e"
+      },
+      "source": [
+        "conta_do_gui.deposita(500)\n",
+        "print(conta_do_gui)"
+      ],
+      "execution_count": 61,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[>>Codigo 15 Saldo 500<<]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9acqH1jxRAZ0",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "2164a166-d70c-4774-8575-7f7f2701037a"
+      },
+      "source": [
+        "conta_da_dani = ContaCorrente(47685)\n",
+        "conta_da_dani.deposita(1000)\n",
+        "print(conta_da_dani)"
+      ],
+      "execution_count": 62,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[>>Codigo 47685 Saldo 1000<<]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZlH9zEPuRUCG",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "contas = [conta_do_gui, conta_da_dani, conta_do_gui]"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xFZ2rS-wRYaR",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "conta_do_gui.deposita(500)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "U3zF21bdRuBL",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 69
+        },
+        "outputId": "cb31abc3-8b78-447b-bcc0-ad15de02da11"
+      },
+      "source": [
+        "for conta in contas:\n",
+        "  print(conta)"
+      ],
+      "execution_count": 75,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[>>Codigo 15 Saldo 1000<<]\n",
+            "[>>Codigo 47685 Saldo 1000<<]\n",
+            "[>>Codigo 15 Saldo 1000<<]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_X1xHJzLStMt",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "contas[2].deposita(500)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZoS41jQATNgL",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "4eadd18a-56bf-4c7e-8c1e-9bd2eefee0a6"
+      },
+      "source": [
+        "print(conta_do_gui)"
+      ],
+      "execution_count": 77,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[>>Codigo 15 Saldo 1500<<]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KZx5opX8TQZM",
         "colab_type": "code",
         "colab": {}
       },
