--- a/Introdução_a_Collections.ipynb
+++ b/Introdução_a_Collections.ipynb
@@ -6,7 +6,7 @@
       "name": "Introdução a Collections",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOwVrIXXuCO/OWuNqAAlDmM",
+      "authorship_tag": "ABX9TyMbt2O9PT0OsMwHwV/4GYrw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1300,6 +1300,273 @@
       "cell_type": "code",
       "metadata": {
         "id": "ZWGfdMa-XOAL",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "b22a2966-822b-4461-9abe-92f5864cc4df"
+      },
+      "source": [
+        "usuarios = [guilherme, daniela]\n",
+        "usuarios"
+      ],
+      "execution_count": 91,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[('Guilherme', 37, 1981), ('Daniela', 31, 1987)]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 91
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6fmpJtOalqKr",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "usuarios.append(('Paulo', 39, 1979))"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "avNtfgAtlw5l",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "f07c4657-80dc-4ac7-e874-1d1b506a7fb7"
+      },
+      "source": [
+        "usuarios"
+      ],
+      "execution_count": 93,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[('Guilherme', 37, 1981), ('Daniela', 31, 1987), ('Paulo', 39, 1979)]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 93
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DJ0vrugulydK",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "60fe9a63-a598-439e-93f2-7e0bc1dc6989"
+      },
+      "source": [
+        "usuarios[0]"
+      ],
+      "execution_count": 94,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "('Guilherme', 37, 1981)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 94
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "k-AbHfLMl4-o",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 168
+        },
+        "outputId": "f670f648-658b-45cd-9459-173755acdb1a"
+      },
+      "source": [
+        "usuarios[0][0] = 'Guilherme Silveira'"
+      ],
+      "execution_count": 97,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-97-dc00118821b7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0musuarios\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'Guilherme Silveira'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jzgosXE9mBli",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 52
+        },
+        "outputId": "aa699e73-32fc-46d9-c5a8-8b62c9cf8404"
+      },
+      "source": [
+        "conta_do_gui = ContaCorrente(15)\n",
+        "conta_do_gui.deposita(500)\n",
+        "conta_da_dani = ContaCorrente(1234)\n",
+        "conta_da_dani.deposita(1000)\n",
+        "\n",
+        "contas = (conta_do_gui, conta_da_dani)\n",
+        "\n",
+        "contas"
+      ],
+      "execution_count": 98,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(<__main__.ContaCorrente at 0x7f5fa5a2a828>,\n",
+              " <__main__.ContaCorrente at 0x7f5fa59ab6a0>)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 98
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DNe6BiRDmsxE",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 52
+        },
+        "outputId": "e8cbd052-4242-4180-963b-ecf6a1bdf72a"
+      },
+      "source": [
+        "for conta in contas: \n",
+        "  print(conta)"
+      ],
+      "execution_count": 100,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[>>Codigo 15 Saldo 500<<]\n",
+            "[>>Codigo 1234 Saldo 1000<<]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ybon9Bo4mxMC",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 168
+        },
+        "outputId": "70a0bb77-b25b-474a-d3d5-1fa6b39ac50b"
+      },
+      "source": [
+        "contas.append(32142423)"
+      ],
+      "execution_count": 101,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "AttributeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-101-16b2e97a59b0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mcontas\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m32142423\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m: 'tuple' object has no attribute 'append'"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ydzFLLRKm9kD",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "contas[0].deposita(300)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "oNWz17S-nEHq",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 52
+        },
+        "outputId": "d30b63bf-0011-41f7-e837-e04ccdad4394"
+      },
+      "source": [
+        "for conta in contas:\n",
+        "  print (conta)"
+      ],
+      "execution_count": 104,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[>>Codigo 15 Saldo 800<<]\n",
+            "[>>Codigo 1234 Saldo 1000<<]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sEMAKBgmnHpZ",
         "colab_type": "code",
         "colab": {}
       },
