--- a/Introdução_a_Collections.ipynb
+++ b/Introdução_a_Collections.ipynb
@@ -6,7 +6,7 @@
       "name": "Introdução a Collections",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMbt2O9PT0OsMwHwV/4GYrw",
+      "authorship_tag": "ABX9TyNTOtExjkqN+F8P2J4cFUoN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1146,56 +1146,27 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 202
         },
-        "outputId": "0092f614-b5fe-449d-f0e5-58b7e89ac019"
+        "outputId": "9113f819-ff58-4b21-9ffd-476a2ac96d10"
       },
       "source": [
         "conta_do_gui = (15, 1000)\n",
         "#conta_do_gui.deposita() # variação OO\n",
-        "conta_do_gui[1]"
+        "conta_do_gui[1]\n",
+        "conta_do_gui[1] += 100"
       ],
-      "execution_count": 86,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "1000"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 86
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "i_AJyR8BWrF2",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 168
-        },
-        "outputId": "232e025e-04b8-4d9c-9cbf-04b5ed36b6da"
-      },
-      "source": [
-        "conta_do_tui[1] += 100"
-      ],
-      "execution_count": 87,
+      "execution_count": 106,
       "outputs": [
         {
           "output_type": "error",
-          "ename": "NameError",
+          "ename": "TypeError",
           "evalue": "ignored",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-87-c1f428fa7218>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mconta_do_tui\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m100\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m: name 'conta_do_tui' is not defined"
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-106-93ab4e460436>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m#conta_do_gui.deposita() # variação OO\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mconta_do_gui\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mconta_do_gui\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m100\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
           ]
         }
       ]
@@ -1567,6 +1538,208 @@
       "cell_type": "code",
       "metadata": {
         "id": "sEMAKBgmnHpZ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3uTQpIB3p_yn",
+        "colab_type": "text"
+      },
+      "source": [
+        "Herança e Polimorfismo"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ukAd06fbqC_g",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DJHZBibuqFHK",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "class Conta:\n",
+        "\n",
+        "  def __init__(self, codigo):\n",
+        "    self._codigo = codigo\n",
+        "    self._saldo = 0\n",
+        "\n",
+        "  def deposita(self, valor):\n",
+        "    self._saldo += valor\n",
+        "\n",
+        "  def __str__(self):\n",
+        "    return '(>>Codigo {} Saldo {}<<)'.format(self._codigo, self._saldo)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SuIZiLkAqxR9",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "93f68fc8-8ad5-4c4b-abd7-02096c46694f"
+      },
+      "source": [
+        "print(Conta(88))"
+      ],
+      "execution_count": 112,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "(>>Codigo 88 Saldo 0<<)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1iL2DXNWq0QI",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "class ContaCorrente(Conta):\n",
+        "\n",
+        "  def passa_o_mes(self):\n",
+        "    self._saldo -= 2\n",
+        "\n",
+        "class ContaPoupanca(Conta):\n",
+        "  def passa_o_mes(self):\n",
+        "    self._saldo *= 1.01\n",
+        "    self._saldo -= 3"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MBYxONFCrmTl",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "04857912-ea3f-4208-d8f0-ce2230e18d91"
+      },
+      "source": [
+        "conta16 = ContaCorrente(16)\n",
+        "conta16.deposita(1000)\n",
+        "conta16.passa_o_mes()\n",
+        "print(conta16)"
+      ],
+      "execution_count": 124,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "(>>Codigo 16 Saldo 998<<)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TVPdbqGIr3G2",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "8be670e5-4c35-4658-ed74-2ac81e49beb3"
+      },
+      "source": [
+        "conta17 = ContaPoupanca(17)\n",
+        "conta17.deposita(1000)\n",
+        "conta17.passa_o_mes()\n",
+        "print(conta17)"
+      ],
+      "execution_count": 125,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "(>>Codigo 17 Saldo 1007.0<<)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ggbkU21MsEL_",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "contas = [conta16, conta17]"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6ktwd-HssU3z",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 52
+        },
+        "outputId": "bd26f260-6f6b-4aee-ab55-20ad6c941590"
+      },
+      "source": [
+        "for conta in contas:\n",
+        "  conta.passa_o_mes() # duck typing\n",
+        "  print(conta)"
+      ],
+      "execution_count": 127,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "(>>Codigo 16 Saldo 996<<)\n",
+            "(>>Codigo 17 Saldo 1014.07<<)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xUnX8xgzsu2h",
         "colab_type": "code",
         "colab": {}
       },
