--- a/Introdução_a_Collections.ipynb
+++ b/Introdução_a_Collections.ipynb
@@ -6,7 +6,7 @@
       "name": "Introdução a Collections",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNTOtExjkqN+F8P2J4cFUoN",
+      "authorship_tag": "ABX9TyOsZ0+BM+GgYMBkujk+8hmT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -292,7 +292,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 168
+          "height": 167
         },
         "outputId": "32446017-1648-48d5-a717-44f0f5525cad"
       },
@@ -1072,7 +1072,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 307
+          "height": 306
         },
         "outputId": "fe21d6e2-8fc9-4996-8933-dfba2f63c1e5"
       },
@@ -1117,7 +1117,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 168
+          "height": 167
         },
         "outputId": "22a71022-91b5-4813-963f-508c91190b94"
       },
@@ -1378,7 +1378,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 168
+          "height": 167
         },
         "outputId": "f670f648-658b-45cd-9459-173755acdb1a"
       },
@@ -1472,7 +1472,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 168
+          "height": 167
         },
         "outputId": "70a0bb77-b25b-474a-d3d5-1fa6b39ac50b"
       },
@@ -1575,10 +1575,17 @@
       "metadata": {
         "id": "DJHZBibuqFHK",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 237
+        },
+        "outputId": "01c6ae08-1edc-4a1d-ece2-3a08aa327f90"
       },
       "source": [
-        "class Conta:\n",
+        "\n",
+        "from abc import ABCMeta, abstractmethod\n",
+        "\n",
+        "class Conta(metaClass=ABCMeta):\n",
         "\n",
         "  def __init__(self, codigo):\n",
         "    self._codigo = codigo\n",
@@ -1587,11 +1594,27 @@
         "  def deposita(self, valor):\n",
         "    self._saldo += valor\n",
         "\n",
+        "  @abstractmethod\n",
+        "  def passa_o_mes(self):\n",
+        "    pass\n",
+        "\n",
         "  def __str__(self):\n",
         "    return '(>>Codigo {} Saldo {}<<)'.format(self._codigo, self._saldo)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 144,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-144-60e0595d4743>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mabc\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mABCMeta\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mabstractmethod\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0;32mclass\u001b[0m \u001b[0mConta\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmetaClass\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mABCMeta\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m   \u001b[0;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcodigo\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mTypeError\u001b[0m: __init_subclass__() takes no keyword arguments"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1634,7 +1657,10 @@
         "class ContaPoupanca(Conta):\n",
         "  def passa_o_mes(self):\n",
         "    self._saldo *= 1.01\n",
-        "    self._saldo -= 3"
+        "    self._saldo -= 3\n",
+        "\n",
+        "class ContaInvestimento(Conta):\n",
+        "  pass"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1648,7 +1674,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "04857912-ea3f-4208-d8f0-ce2230e18d91"
+        "outputId": "fb38b576-3b90-4439-b302-0a94031d8542"
       },
       "source": [
         "conta16 = ContaCorrente(16)\n",
@@ -1656,7 +1682,7 @@
         "conta16.passa_o_mes()\n",
         "print(conta16)"
       ],
-      "execution_count": 124,
+      "execution_count": 146,
       "outputs": [
         {
           "output_type": "stream",
@@ -1676,7 +1702,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "8be670e5-4c35-4658-ed74-2ac81e49beb3"
+        "outputId": "5b25493e-720e-4190-d426-270a19732ecf"
       },
       "source": [
         "conta17 = ContaPoupanca(17)\n",
@@ -1684,7 +1710,7 @@
         "conta17.passa_o_mes()\n",
         "print(conta17)"
       ],
-      "execution_count": 125,
+      "execution_count": 147,
       "outputs": [
         {
           "output_type": "stream",
@@ -1717,29 +1743,139 @@
           "base_uri": "https://localhost:8080/",
           "height": 52
         },
-        "outputId": "bd26f260-6f6b-4aee-ab55-20ad6c941590"
+        "outputId": "e7560a10-1086-48c4-dae4-725e8c4bc976"
       },
       "source": [
         "for conta in contas:\n",
         "  conta.passa_o_mes() # duck typing\n",
         "  print(conta)"
       ],
-      "execution_count": 127,
+      "execution_count": 142,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "(>>Codigo 16 Saldo 996<<)\n",
-            "(>>Codigo 17 Saldo 1014.07<<)\n"
+            "(>>Codigo 16 Saldo 994<<)\n",
+            "(>>Codigo 17 Saldo 1021.2107000000001<<)\n"
           ],
           "name": "stdout"
         }
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xqT670Cktr1r",
+        "colab_type": "text"
+      },
+      "source": [
+        "# evitaremos usar array puro, se precisamos de trabalho numérico, é costume usar o numpy\n",
+        "\n",
+        "\n",
+        "```\n",
+        "# This is formatted as code\n",
+        "```\n",
+        "\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "xUnX8xgzsu2h",
+        "id": "TlMmXNcCtu-k",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 202
+        },
+        "outputId": "c6b52f03-24fa-4d80-fa94-89ef6404af33"
+      },
+      "source": [
+        "import array as arr\n",
+        "\n",
+        "arr.array('d',[1,3.5], 'Guilherme')"
+      ],
+      "execution_count": 149,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-149-3f4b70b78151>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0marray\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0marr\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0marr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'd'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3.5\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Guilherme'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m: array() takes at most 2 arguments (3 given)"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "urqOeVZevAaa",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "f0ce6c5e-b1d2-4110-d0a9-a8053064d0c4"
+      },
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "numeros = np.array([1, 3.5])\n",
+        "numeros"
+      ],
+      "execution_count": 150,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1. , 3.5])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 150
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MTXFlllzvkiR",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "29373ce2-6368-4eca-ea1d-1c42228f6fc5"
+      },
+      "source": [
+        "numeros + 3"
+      ],
+      "execution_count": 151,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([4. , 6.5])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 151
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zCUe9Knqv0LT",
         "colab_type": "code",
         "colab": {}
       },
