--- a/Introdução_a_Collections.ipynb
+++ b/Introdução_a_Collections.ipynb
@@ -6,7 +6,7 @@
       "name": "Introdução a Collections",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMbxbmZhYDzyaFvXnDDtn+V",
+      "authorship_tag": "ABX9TyPo3fR/bPzZL+vZhauciE2t",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1903,6 +1903,9 @@
         "      return False\n",
         "\n",
         "    return self._codigo == outro._codigo\n",
+        "  \n",
+        "  def __lt__(self, outro):\n",
+        "    return self._saldo < outro._saldo\n",
         "\n",
         "  def deposita(self, valor):\n",
         "    self._saldo += valor\n",
@@ -2446,6 +2449,695 @@
       "cell_type": "code",
       "metadata": {
         "id": "9aP2hY3LgVoJ",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "52698397-45f8-441e-8c80-656378c6c8ce"
+      },
+      "source": [
+        "idades"
+      ],
+      "execution_count": 216,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[15, 87, 32, 65, 56, 32, 49, 37]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 216
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QqUydGh_kkWk",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "45b25065-459a-47cc-82b6-db140250e817"
+      },
+      "source": [
+        "sorted(idades)"
+      ],
+      "execution_count": 217,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[15, 32, 32, 37, 49, 56, 65, 87]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 217
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "x9pbkepsknAc",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "a1437dd6-5193-49b4-91d1-a02524503115"
+      },
+      "source": [
+        "15 < 32"
+      ],
+      "execution_count": 219,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 219
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gvzgiwzqkvYo",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "f803b5ce-ba3e-45ee-feb8-04313f20ce17"
+      },
+      "source": [
+        "reversed(idades)"
+      ],
+      "execution_count": 220,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<list_reverseiterator at 0x7f5fa5964400>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 220
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Np0j20uxk5LA",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "5079bf1e-5cfe-4331-f6e8-a5b6209a3f05"
+      },
+      "source": [
+        "list(reversed(idades))"
+      ],
+      "execution_count": 221,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[37, 49, 32, 56, 65, 32, 87, 15]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 221
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gisXRrzzk8fO",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "16881a0c-ee9f-47be-ebb4-6537817d3b90"
+      },
+      "source": [
+        "sorted(idades, reverse=True)"
+      ],
+      "execution_count": 223,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[87, 65, 56, 49, 37, 32, 32, 15]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 223
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "siscJHkelL1p",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "c8fce822-94ef-465a-8235-4a5756fcb140"
+      },
+      "source": [
+        "reversed(sorted(idades))"
+      ],
+      "execution_count": 224,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<list_reverseiterator at 0x7f5fa57974a8>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 224
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "X4ePPiYalVwg",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "fe68636a-0992-4ba9-c20c-f87a39524867"
+      },
+      "source": [
+        "list(reversed(sorted(idades)))"
+      ],
+      "execution_count": 225,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[87, 65, 56, 49, 37, 32, 32, 15]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 225
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kXlYpozQlaOE",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "list.sort(idades)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QVo3l2A6ll7e",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "1fd63d0a-0101-4339-ff41-37ad9d2ac562"
+      },
+      "source": [
+        "idades"
+      ],
+      "execution_count": 227,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[15, 32, 32, 37, 49, 56, 65, 87]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 227
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "C9YMzu2ulnr9",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "nomes = ['Guilherme', 'Daniela', 'Paulo']"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NTXxL-fdp_65",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "891242db-a641-4a9e-9366-d03368ed46bf"
+      },
+      "source": [
+        "sorted(nomes)"
+      ],
+      "execution_count": 229,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Daniela', 'Guilherme', 'Paulo']"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 229
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cBwGFMs0qCmo",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "nomes = ['guilherme', 'Daniela', 'Paulo']"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yXtpuShOqJUE",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "eb4964e0-4195-4133-dbc7-a6d5c3acbd49"
+      },
+      "source": [
+        "sorted(nomes)"
+      ],
+      "execution_count": 231,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Daniela', 'Paulo', 'guilherme']"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 231
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Uilp0On9qLSW",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "conta_do_guilherme = ContaSalario(17)\n",
+        "conta_do_guilherme.deposita(500)\n",
+        "\n",
+        "conta_da_daniela = ContaSalario(3)\n",
+        "conta_da_daniela.deposita(1000)\n",
+        "\n",
+        "conta_do_paulo = ContaSalario(133)\n",
+        "conta_do_paulo.deposita(510)\n",
+        "\n",
+        "contas = [conta_do_guilherme, conta_da_daniela, conta_do_paulo]"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "aD4m8FeHrCT2",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 69
+        },
+        "outputId": "38ff8f72-d092-4de3-91c6-823a60cabf82"
+      },
+      "source": [
+        "for conta in contas:\n",
+        "  print(conta)"
+      ],
+      "execution_count": 235,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "(>>Codigo 17 Saldo 500<<)\n",
+            "(>>Codigo 3 Saldo 1000<<)\n",
+            "(>>Codigo 133 Saldo 510<<)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DMyEM_HArFnX",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 167
+        },
+        "outputId": "c919da8b-8408-402b-e069-1332ef7f7e57"
+      },
+      "source": [
+        "sorted(contas)"
+      ],
+      "execution_count": 236,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-236-df7230969aa4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msorted\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcontas\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m: '<' not supported between instances of 'ContaSalario' and 'ContaSalario'"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zIA8GicfrHUN",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 167
+        },
+        "outputId": "96a8f771-369d-4fbe-f84d-ad19e0a93d5a"
+      },
+      "source": [
+        "\n",
+        "conta_do_guilherme < conta_da_daniela"
+      ],
+      "execution_count": 237,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-237-23ebe804144a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mconta_do_guilherme\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0mconta_da_daniela\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m: '<' not supported between instances of 'ContaSalario' and 'ContaSalario'"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Tl4YmuNDrTf4",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 69
+        },
+        "outputId": "18711b3e-2526-42e2-abd5-62ada37b885e"
+      },
+      "source": [
+        "def extrai_saldo(conta):\n",
+        "  return conta._saldo # não pode fazer\n",
+        "\n",
+        "sorted(contas, key=extrai_saldo)"
+      ],
+      "execution_count": 240,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[<__main__.ContaSalario at 0x7f5fa5784c50>,\n",
+              " <__main__.ContaSalario at 0x7f5fa5784710>,\n",
+              " <__main__.ContaSalario at 0x7f5fa57847b8>]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 240
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vCYcsH68rji6",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 69
+        },
+        "outputId": "f9624aaf-7a25-42eb-c191-8a8ff3ca9d17"
+      },
+      "source": [
+        "for conta in sorted(contas, key=extrai_saldo):\n",
+        "  print(conta)"
+      ],
+      "execution_count": 241,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "(>>Codigo 17 Saldo 500<<)\n",
+            "(>>Codigo 133 Saldo 510<<)\n",
+            "(>>Codigo 3 Saldo 1000<<)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "oD8mUiOKr6As",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 69
+        },
+        "outputId": "f07624fc-7bbf-4de5-baaf-8ae80998990f"
+      },
+      "source": [
+        "from operator import attrgetter\n",
+        "\n",
+        "for conta in sorted(contas, key=attrgetter('_saldo')): # ainda não está bom, está usando atributo privado\n",
+        "  print(conta)"
+      ],
+      "execution_count": 243,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "(>>Codigo 17 Saldo 500<<)\n",
+            "(>>Codigo 133 Saldo 510<<)\n",
+            "(>>Codigo 3 Saldo 1000<<)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "erxlWJdhsqIb",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "63097289-22ef-415f-d511-e7cad612bfdd"
+      },
+      "source": [
+        "conta_do_guilherme > conta_da_daniela"
+      ],
+      "execution_count": 249,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 249
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XnqK-XqXuH85",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 69
+        },
+        "outputId": "70ddf25b-178d-4689-c04d-528d4f7c0212"
+      },
+      "source": [
+        "sorted(contas)"
+      ],
+      "execution_count": 250,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[<__main__.ContaSalario at 0x7f5fa5768eb8>,\n",
+              " <__main__.ContaSalario at 0x7f5fa5768f28>,\n",
+              " <__main__.ContaSalario at 0x7f5fa5768ef0>]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 250
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qcYWAHgauUXO",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 69
+        },
+        "outputId": "18a571a6-ad07-445e-d992-3fde625c6a84"
+      },
+      "source": [
+        "for conta in sorted(contas):\n",
+        "  print(conta)"
+      ],
+      "execution_count": 252,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "(>>Codigo 17 Saldo 500<<)\n",
+            "(>>Codigo 133 Saldo 510<<)\n",
+            "(>>Codigo 3 Saldo 1000<<)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ufn7fyKnuagr",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 69
+        },
+        "outputId": "c0f0ea40-673d-4828-9597-398e8de783a1"
+      },
+      "source": [
+        "for conta in sorted(contas, reverse=True):\n",
+        "  print(conta)"
+      ],
+      "execution_count": 253,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "(>>Codigo 3 Saldo 1000<<)\n",
+            "(>>Codigo 133 Saldo 510<<)\n",
+            "(>>Codigo 17 Saldo 500<<)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "X8hfqcKSuqIJ",
         "colab_type": "code",
         "colab": {}
       },
