--- a/Introdução_a_Collections.ipynb
+++ b/Introdução_a_Collections.ipynb
@@ -6,7 +6,7 @@
       "name": "Introdução a Collections",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPo3fR/bPzZL+vZhauciE2t",
+      "authorship_tag": "ABX9TyPOGxFVDuBI8UWoa2OWlED0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2822,14 +2822,14 @@
         "colab": {}
       },
       "source": [
-        "conta_do_guilherme = ContaSalario(17)\n",
+        "conta_do_guilherme = ContaSalario(1700)\n",
         "conta_do_guilherme.deposita(500)\n",
         "\n",
         "conta_da_daniela = ContaSalario(3)\n",
-        "conta_da_daniela.deposita(1000)\n",
+        "conta_da_daniela.deposita(500)\n",
         "\n",
         "conta_do_paulo = ContaSalario(133)\n",
-        "conta_do_paulo.deposita(510)\n",
+        "conta_do_paulo.deposita(500)\n",
         "\n",
         "contas = [conta_do_guilherme, conta_da_daniela, conta_do_paulo]"
       ],
@@ -2871,7 +2871,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 167
+          "height": 168
         },
         "outputId": "c919da8b-8408-402b-e069-1332ef7f7e57"
       },
@@ -2900,7 +2900,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 167
+          "height": 168
         },
         "outputId": "96a8f771-369d-4fbe-f84d-ad19e0a93d5a"
       },
@@ -3138,6 +3138,371 @@
       "cell_type": "code",
       "metadata": {
         "id": "X8hfqcKSuqIJ",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 69
+        },
+        "outputId": "42bfe678-e9f3-4f33-f2a5-a9fec9a0c635"
+      },
+      "source": [
+        "for conta in sorted(contas, key=attrgetter('_saldo', '_codigo')):\n",
+        "  print(conta)"
+      ],
+      "execution_count": 257,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "(>>Codigo 3 Saldo 500<<)\n",
+            "(>>Codigo 133 Saldo 500<<)\n",
+            "(>>Codigo 1700 Saldo 500<<)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wKhiMf59wVuR",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "class ContaSalario:\n",
+        "  def __init__(self, codigo):\n",
+        "    self._codigo = codigo\n",
+        "    self._saldo = 0\n",
+        "\n",
+        "  def __eq__(self, outro):\n",
+        "    if type(outro) != ContaSalario:\n",
+        "      return False\n",
+        "\n",
+        "    return self._codigo == outro._codigo\n",
+        "  \n",
+        "  def __lt__(self, outro):\n",
+        "    if self._saldo != outro._saldo:\n",
+        "      return self._saldo < outro._saldo\n",
+        "          \n",
+        "    return self._codigo < outro._codigo\n",
+        "\n",
+        "  def deposita(self, valor):\n",
+        "    self._saldo += valor\n",
+        "\n",
+        "  def __str__(self):\n",
+        "    return '(>>Codigo {} Saldo {}<<)'.format(self._codigo, self._saldo)\n",
+        "\n",
+        "class ContaMultiploSalario(ContaSalario):\n",
+        "  pass"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DeR-wXmQxf0P",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 69
+        },
+        "outputId": "a2a55ef6-d3f2-472d-95fb-1b4848dcf295"
+      },
+      "source": [
+        "for conta in sorted(contas):\n",
+        "  print(conta)"
+      ],
+      "execution_count": 263,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "(>>Codigo 3 Saldo 500<<)\n",
+            "(>>Codigo 133 Saldo 500<<)\n",
+            "(>>Codigo 1700 Saldo 500<<)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TOoyI7wsxk4r",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from functools import total_ordering\n",
+        "\n",
+        "@total_ordering\n",
+        "class ContaSalario:\n",
+        "  def __init__(self, codigo):\n",
+        "    self._codigo = codigo\n",
+        "    self._saldo = 0\n",
+        "\n",
+        "  def __eq__(self, outro):\n",
+        "    if type(outro) != ContaSalario:\n",
+        "      return False\n",
+        "\n",
+        "    return self._codigo == outro._codigo and self._saldo == outro._saldo\n",
+        "  \n",
+        "  def __lt__(self, outro):\n",
+        "    if self._saldo != outro._saldo:\n",
+        "      return self._saldo < outro._saldo\n",
+        "          \n",
+        "    return self._codigo < outro._codigo\n",
+        "\n",
+        "  def deposita(self, valor):\n",
+        "    self._saldo += valor\n",
+        "\n",
+        "  def __str__(self):\n",
+        "    return '(>>Codigo {} Saldo {}<<)'.format(self._codigo, self._saldo)\n",
+        "\n",
+        "class ContaMultiploSalario(ContaSalario):\n",
+        "  pass"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WdW-M7Joyfp5",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "conta_do_guilherme = ContaSalario(1700)\n",
+        "conta_do_guilherme.deposita(500)\n",
+        "\n",
+        "conta_da_daniela = ContaSalario(3)\n",
+        "conta_da_daniela.deposita(1000)\n",
+        "\n",
+        "conta_do_paulo = ContaSalario(133)\n",
+        "conta_do_paulo.deposita(500)\n",
+        "\n",
+        "contas = [conta_do_guilherme, conta_da_daniela, conta_do_paulo]"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "If3OHRoRysID",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "c82dfec1-f5c4-4dc5-8310-ae794007f965"
+      },
+      "source": [
+        "conta_do_guilherme <= conta_da_daniela"
+      ],
+      "execution_count": 273,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 273
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "H9S2zfNLzJee",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "5ff54caf-bd0d-4dd0-9162-446f64824367"
+      },
+      "source": [
+        "conta_do_guilherme <= conta_do_paulo"
+      ],
+      "execution_count": 274,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 274
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4qX1LxrDzVJt",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "1c965813-233d-4bd0-d674-311655e54c5b"
+      },
+      "source": [
+        "conta_do_guilherme != conta_do_guilherme"
+      ],
+      "execution_count": 275,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 275
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lHAsrz9Fzc-s",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "b106a3d9-7515-4e1c-d76f-8986328eb195"
+      },
+      "source": [
+        "conta_do_guilherme < conta_do_guilherme"
+      ],
+      "execution_count": 276,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 276
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZeQ4E_IqzhHm",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "ac8dc5e9-f466-4bcf-f670-35c0a45c50ea"
+      },
+      "source": [
+        "conta_do_guilherme > conta_do_guilherme"
+      ],
+      "execution_count": 277,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 277
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HtajIS7ZzjtA",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "1c2a4a9c-e5a0-45b5-e56e-a84c0515d889"
+      },
+      "source": [
+        "conta_do_guilherme == conta_do_guilherme"
+      ],
+      "execution_count": 278,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 278
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GTLx00TfzliG",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "0d6a115b-47fb-4d3d-fb06-ee1fb2ea2339"
+      },
+      "source": [
+        "conta_do_guilherme <= conta_do_guilherme"
+      ],
+      "execution_count": 279,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 279
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fCOvWraGzoNO",
         "colab_type": "code",
         "colab": {}
       },
